[tool.poetry]
name = "glaucoma-detection"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.7"
streamlit = ">=1.2.0"
tensorflow = ">=2.0"
scikit-learn = ">=0.20.0"
protobuf = "3.20.3"  # Ensure compatibility with TensorFlow

[tool.poetry.dev-dependencies]
black = "*"  # Pretty formatting of Python code
pynvim = "*" # Allows nvim users to use black formatting

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary = false
